BusinessAccount is optional + showTwinClassLinksMode + dateFromat validation fix